--- a/templates/dashboard-page.html.j2
+++ b/templates/dashboard-page.html.j2
@@ -1,5 +1,6 @@
+{% set data = execute_query("SELECT theme, homepage_color, dashboard_color FROM settings")[0] %}
 {% set active_webpage = "dashboard" %}
-{% set active_theme = "point-theme" %}
+{% set active_theme = data["theme"] %}
 {% extends "template-loaders/master-header.html.j2" %}
 
 {% block body %}
