--- a/templates/template-loaders/master-header.html.j2
+++ b/templates/template-loaders/master-header.html.j2
@@ -10,18 +10,21 @@
 	    <!-- CSS, Fonts, Links -->
 	    <link rel="profile" href="https://gmpg.org/xfn/11">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
-		{% if active_webpage == "dashboard": %}
-			<link rel="stylesheet" href="{{ url_for('static', filename='themes/point-theme/css/style.css') }}">
+		{% if active_webpage == "dashboard" or active_webpage == "login": %}
+			<link rel="stylesheet" href="{{ url_for('static', filename='admin/css/style.css') }}">
 		{% else: %}
-			<link rel="stylesheet" href="{{ url_for('static', filename='themes/point-theme/css/style.css') }}">
+			{% set css_url = "themes/" + active_theme + "/css/style.css" %}
+			<link rel="stylesheet" href="{{ url_for('static', filename=css_url) }}">
 		{% endif %}
 	</head>
 	<body class="preload">
-		{# Include navigation file #}
-		<header class="header-wrapper">
-			{% set header_theme_file = "themes/" + active_theme + "/header.html.j2" %}
-			{% include header_theme_file %}
-		</header>
+		{# Include navigation file on the theme, not in dashboard or login page #}
+		{% if active_webpage == "home": %}
+			<header class="header-wrapper">
+				{% set header_theme_file = "themes/" + active_theme + "/header.html.j2" %}
+				{% include header_theme_file %}
+			</header>
+		{% endif %}
 		<div class="container">
 			{% block body %}{% endblock %}
 		</div>
