--- a/templates/admin/includes/_portfolio_item_modal_view.html.j2
+++ b/templates/admin/includes/_portfolio_item_modal_view.html.j2
@@ -28,7 +28,7 @@
 				<textarea type="text" name="item_modal-{{ pid }}_content" class="item-{{ pid }}-input">{{ modal_content }}</textarea>
 			</div>
 			<div class="form-group">
-				<p class="db-quick-inner-text">Project Logo Path</p>
+				<p class="db-quick-inner-text">Logo File Name</p>
 				<input type="text" name="item-{{ pid }}_logo" value="{{ logo }}" class="item-{{ pid }}-input">
 			</div>
 			<div class="form-group">
