--- a/templates/login-page.html.j2
+++ b/templates/login-page.html.j2
@@ -9,7 +9,7 @@
 			<div class="login-wrapper display-table">
 				<div class="login-form display-table-cell">
 					<div class="back-home">Back to <a href="http://localhost:5000">homepage</a>.</div>
-					<h1 class="login-text"><img src="/static/uploads/logos/point-cms-logo.svg" alt=""></h1>
+					<h1 class="login-logo"><img src="/static/uploads/logos/point-blue.svg" alt="PointCMS Official Logo"></h1>
 					<h4 class="login-description">Welcome to the login page</h4>
 					<div class="login-status-wrapper">
 						<div class="login-status">
