--- a/static/themes/point-theme/css/style.css
+++ b/static/themes/point-theme/css/style.css
@@ -85,12 +85,14 @@ img {
   /* .column-12 (12 columns / 12 = 1. 100% / 1 = 100%) */
   .column-12 {
     width: 100%; } }
+  
 @font-face {
   font-family: 'icomoon';
   src: url("../assets/fonts/icomoon.eot?tawuau");
   src: url("../assets/fonts/icomoon.eot?tawuau#iefix") format("embedded-opentype"), url("../assets/fonts/icomoon.ttf?tawuau") format("truetype"), url("../assets/fonts/icomoon.woff?tawuau") format("woff"), url("../assets/fonts/icomoon.svg?tawuau#icomoon") format("svg");
   font-weight: normal;
   font-style: normal; }
+
 .icon {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
@@ -211,6 +213,11 @@ a:link, a:visited {
   -ms-transition: none !important;
   -o-transition: none !important;
   transition: none !important; }
+
+.devicon-font {
+  font-size: 2em;
+  margin-right: 10px;
+}
 
 .align-left {
   text-align: left; }
@@ -451,6 +458,12 @@ a:link, a:visited {
         font-size: 2em; }
       #portfolio .item-preview-modal .modal-wrapper .modal-footer a {
         text-decoration: none; }
+      .portfolio-item .item-title { font-size: 1.3em; margin-bottom: 20px; }
+      .portfolio-item .item-logo {
+        max-width: 145px;
+        height: auto;
+        margin: 0 auto;
+      }
 
 #connect ul {
   margin: 0;
