--- a/templates/admin/_dashboard_settings.html.j2
+++ b/templates/admin/_dashboard_settings.html.j2
@@ -1,38 +1,50 @@
 <div class="row">
 	<div class="column-12">
 		<div class="column-4">
-			<p class="db-quick-title">General Settings</p>
-			<p class="db-quick-subtitle">Webisite Info</p>
+			<div class="db-master-section">
+				<p class="db-quick-title">General Settings</p>
+				<p class="db-quick-subtitle">Webisite Info</p>
 
-			<form class="general-form">
-				<div class="db-quick-row">
-					<div class="form-group">
-						<p class="db-quick-inner-text">Website Name:</p>
-						<input type="text" name="website_name" value="{{ website_name }}" class="general-input">
+				<form class="general-form">
+					<div class="db-quick-row">
+						<div class="form-group">
+							<p class="db-quick-inner-text">Website Name:</p>
+							<input type="text" name="website_name" value="{{ website_name }}" class="general-input">
+						</div>
+						<div class="form-group">
+							<p class="db-quick-inner-text">Website Description:</p>
+							<input type="text" name="website_description" value="{{ website_info['website_description'] }}" class="general-input">
+						</div>
+						<div class="form-group">
+							<p class="db-quick-inner-text">Author:</p>
+							<input type="text" name="website_author" value="{{ website_info['author'] }}" class="general-input">
+						</div>
+						<div class="form-group">
+							<p class="db-quick-inner-text">Email Address:</p>
+							<input type="text" name="email_address" value="{{ website_info['email_address'] }}" class="general-input">
+						</div>
+						<div class="align-right">
+							<button type="submit" class="save-btn" id="general-submit">Save</button>
+						</div>
 					</div>
-					<div class="form-group">
-						<p class="db-quick-inner-text">Website Description:</p>
-						<input type="text" name="website_description" value="{{ website_info['website_description'] }}" class="general-input">
-					</div>
-					<div class="form-group">
-						<p class="db-quick-inner-text">Author:</p>
-						<input type="text" name="website_author" value="{{ website_info['author'] }}" class="general-input">
-					</div>
-					<div class="form-group">
-						<p class="db-quick-inner-text">Email Address:</p>
-						<input type="text" name="email_address" value="{{ website_info['email_address'] }}" class="general-input">
-					</div>
-					<div class="align-right">
-						<button type="submit" class="save-btn" id="general-submit">Save</button>
-					</div>
-				</div>
-			</form>
-
+				</form>
+			</div>
 		</div>
 		<div class="column-4">
-			<p class="db-quick-title">Sections Settings</p>
-			<p class="db-quick-subtitle">Footer Info</p>
-			<div class="db-quick-row">
+			<div class="db-master-section">
+				<p class="db-quick-title">Sections Settings</p>
+				<p class="db-quick-subtitle">Footer Info</p>
+				<div class="db-quick-row">
+					<form class="footer-form">
+						<div class="form-group">
+							<textarea name="footer_info" class="footer-input">{{ website_info['footer_info'] }}</textarea>
+						</div>
+						<div class="align-right">
+							<button type="submit" class="save-btn" id="footer-submit">Save</button>
+						</div>		
+					</form>
+				</div>
+				<p class="db-quick-subtitle">Custom CSS</p>
 				<form class="footer-form">
 					<div class="form-group">
 						<textarea name="footer_info" class="footer-input">{{ website_info['footer_info'] }}</textarea>
@@ -41,7 +53,6 @@
 						<button type="submit" class="save-btn" id="footer-submit">Save</button>
 					</div>		
 				</form>
-
 			</div>
 		</div>
 	</div>
