--- a/templates/themes/point-theme/content.html.j2
+++ b/templates/themes/point-theme/content.html.j2
@@ -1,39 +1,41 @@
-{# Loop thought all dictionaries #}
-{% for i in range(0, sections | length) %}
-    {# Get attributes (dictionary) from rs (list) #}
-    {% set attributes = sections[i] %}	
+{% block body %}
+    {# Loop thought all dictionaries #}
+    {% for i in range(0, sections | length) %}
+        {# Get attributes (dictionary) from rs (list) #}
+        {% set attributes = sections[i] %}	
 
-    <div class="row">
-        <div class="column-12">
+        <div class="row">
+            <div class="column-12">
 
-            {#  First section will have class 'first' #}
-            {% if i == 0 %}
-                <section class="site-section first" id="{{ attributes["class_id"] }}">
-            {% else %}
-                <section class="site-section" id="{{ attributes["class_id"] }}">
-            {% endif %}
+                {#  First section will have class 'first' #}
+                {% if i == 0 %}
+                    <section class="site-section first" id="{{ attributes["class_id"] }}">
+                {% else %}
+                    <section class="site-section" id="{{ attributes["class_id"] }}">
+                {% endif %}
 
-                <div class="section-wrapper">
+                    <div class="section-wrapper">
 
-                    {# Set path for section template #}
-                    {% set path = 'template-parts/' + attributes["type"] + ".html.j2" %}
+                        {# Set path for section template #}
+                        {% set path = 'themes/point-theme/template-parts/' + attributes["type"] + ".html.j2" %}
 
-                    {% set class_id = attributes["class_id"] %}
+                        {% set class_id = attributes["class_id"] %}
 
-                    <h1 class="section-title">{{ attributes["title"] }}</h1>
-                    <h4 class="section-description">{{ attributes["description"] }}</h4>
+                        <h1 class="section-title">{{ attributes["title"] }}</h1>
+                        <h4 class="section-description">{{ attributes["description"] }}</h4>
 
-                    {# Include template #}
-                    {% include path %} 
+                        {# Include template #}
+                        {% include path %} 
 
-                </div>
-            </section>
+                    </div>
+                </section>
 
-            {# If last item, do not generate separator (line) #}
-            {% if i != sections | length - 1 %}
-                <div class="separator"></div>		
-            {% endif %}
-            
+                {# If last item, do not generate separator (line) #}
+                {% if i != sections | length - 1 %}
+                    <div class="separator"></div>		
+                {% endif %}
+                
+            </div>
         </div>
-    </div>
-{% endfor %}
+    {% endfor %}
+{% endblock %}
