--- a/templates/dashboard-page.html.j2
+++ b/templates/dashboard-page.html.j2
@@ -1,4 +1,4 @@
-{% set data = execute_query("SELECT theme, homepage_color, dashboard_color FROM settings")[0] %}
+{% set data = execute_query("SELECT homepage_color, dashboard_color FROM settings")[0] %}
 {% set active_webpage = "dashboard" %}
 {% set active_theme = data["theme"] %}
 
